# notebooks

./: .gitignore  NLP_Workshop.ipynb  README.md  advent_of_code_2025.py  book_language_translation.ipynb  list_of_image_files.txt  loonstroken_yacht.ipynb  makefile  pyproject.toml
.ipynb_checkpoints/: spotify-checkpoint.ipynb  spotify_genres-checkpoint.ipynb  yacht_valentijnsdag_challenge-checkpoint.ipynb
data/other/: siddhartha_eine_indische_dichtung_herman_hesse.epub
notebooks/: advent_of_code.ipynb  advent_of_code_2015.py  advent_of_code_2025.ipynb  advent_of_code_2025.py  book_language_translation.ipynb  book_translation.py  image_to_text.ipynb  image_to_text.py  inventory.py  speech_to_text.ipynb
notebooks/advent_of_code/: advent_of_code_2015.ipynb  advent_of_code_2015.py  advent_of_code_2025.ipynb  advent_of_code_2025.py  advent_of_code_utils.py
