[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ebooklib>=0.20",
    "lingua-language-detector>=2.1.1",
    "marimo>=0.18.1",
    "nbformat>=5.10.4",
    "pulp>=3.3.0",
    "pyzmq>=27.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.8",
]
